@@ -460,7 +460,7 @@ COMMONOBJS = \
 
 
 # Targets
-.PHONY: clean
+.PHONY: clean $(TIMIDEPS)
 
 default: $(SW_BINARY)
 all: default
